# hbm4-model

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
model/: __init__.py  multi_channel.py  rtl_verification.py
model/benchmark/: __init__.py  bandwidth_benchmark.py  benchmark_config.py  benchmark_runner.py  comparison_benchmark.py  latency_benchmark.py  scheduler_benchmark.py
model/controller/: __init__.py  address_decoder.py  command_pipeline.py  command_sequencer.py  config.py  controller.py  exceptions.py  hbm4_address_decoder.py  hbm4_controller.py  hbm4_qos_scheduler.py  hbm4_refresh_scheduler.py  qos_scheduler.py  queue.py  refresh_scheduler.py  request.py  scheduler.py
model/controller/tests/: __init__.py  test_address_decoder.py  test_controller.py  test_queue.py  test_request.py  test_scheduler.py
model/dram/: __init__.py  bank_state_machine.py  channel_model.py  channel_timing.py  dfi_interface.py  dram_model.py  ecc_crc.py  hbm4_channel_model.py  hbm4_compliance.py  hbm4_spec.py  hbm4_spec_production.py  hbm4_validation.py  lane_repair.py  logic_base_die.py  loopback_controller.py  mbist_controller.py  phy_signal.py  phy_training.py  power_estimator.py  stack_model.py  thermal_controller.py  thermal_management.py  thermal_model.py  thermal_sensor.py  timing.py
model/dram/tests/: test_bank_state_machine.py  test_channel_model.py  test_lane_repair.py  test_model_alignment.py
model/hbm4/: __init__.py
model/hbm4/phy/: __init__.py  tsv_phy.py
model/hbm4/power/: power_estimator.py  thermal_model.py
model/interconnect/: __init__.py  axi4_bridge.py  axi4_converter.py  axi4_monitor.py  gem5_memory_port.py  interconnect.py
model/phy/: __init__.py  channel_model.py  eye_analyzer.py  ibis_model.py  ibis_parser.py  ibis_simulator.py  phy_training.py  signal_integrity.py  tap_coefficient.py  training_sequences.py
model/traffic/: __init__.py  traffic_generator.py
